--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
+@using Radzen.Blazor
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<RadzenCard class="rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12" style="max-width: 600px;">
+    
+    <RadzenTemplateForm Data=@("SimpleLogin") Action="http://www.google.com">
+        <RadzenLogin AllowRegister="false" AllowResetPassword="false" />
+    </RadzenTemplateForm>
+    
+</RadzenCard>
 
-Welcome to your new app.
+
+@code{
+
+
+
+}
