--- a/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using Radzen.Blazor
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Login</PageTitle>
 
 <RadzenCard class="rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12" style="max-width: 600px;">
     
