Prøvd å ordne Json deserialize. Får ikke til konsoll.

--- a/VismaBlazor/VismaBlazor.Client/Pages/Resultat.razor
+++ b/VismaBlazor/VismaBlazor.Client/Pages/Resultat.razor
@@ -45,6 +45,7 @@ else
     protected override void OnInitialized()
     {
         brukere = BrukerController.HentBrukere();
+        Console.WriteLine("HEi");
     }
 
 }
