Import.razor fungerer som ønsket etter @rendermode og @attribute

--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -75,10 +75,7 @@ else
     private List<string> errors = new();
     private IBrowserFile? file;
 
-    private async Task LoadFiles(InputFileChangeEventArgs e)
-    {
-        file = e.File; 
-    }
+    private async Task LoadFiles(InputFileChangeEventArgs e) => file = e.File;
 
 
     private async Task<List<Ansatte>> File()
