--- a/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Importer.razor
@@ -27,12 +27,14 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
 
 <div class="d-flex justify-content-between form-control">
 <InputFile OnChange="LoadFiles" />
-<button class="btn btn-primary" @onclick="@Import">Import</button> 
+    <button class="btn btn-primary" @onclick="() => Import(file)">Import</button>
 </div>
 
 
 
+
 @if (errors.Count > 0)
+
 {
     <h2>Errors</h2>
     <ul class="text-danger">
@@ -51,9 +53,10 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
                 <th>ID</th>
                 <th>Fornavn</th>
                 <th>Etternavn</th>
-                <th>E-post</th>
+                <th>Telefon</th>
                 <th>Brukernavn</th>
                 <th>Passord</th>
+                <th>E-post</th>
             </tr>
         </thead>
         <tbody>
@@ -63,38 +66,58 @@ Dataen skal så vises i resultat page som åpnes etter importen er ferdig.
                     <td>@ansatt.Id</td>
                     <td>@ansatt.Fornavn</td>
                     <td>@ansatt.Etternavn</td>
-                    <td>@ansatt.EPost</td>
+                    <td>@ansatt.Telefon</td>
                     <td>@ansatt.Brukernavn</td>
                     <td>@ansatt.Passord</td>
+                    <td>@ansatt.EPost</td>
                 </tr>
             }
         </tbody>
     </table>
+    
 } 
 else
 {
     <p>Ingen data å vise... </p>  
 }
 
-@code{
-    private List<Ansatte> ansatte;
-    private long maxFileSize = 1024 * 1024 * 3;  // 3MB  List<Ansatte> ansatteListe = new List<Ansatte>();
-    private List<string> errors = new();
-    private IBrowserFile? file;
-
-    private async Task LoadFiles(InputFileChangeEventArgs e) => file = e.File; //1
-
+@code
+{
+    public List<Ansatte> ansatte;
+    public long maxFileSize = 1024 * 1024 * 3;  // 3MB  List<Ansatte> ansatteListe = new List<Ansatte>();
+    public List<string> errors = new();
+    public IBrowserFile? file;
 
 
-    //Her blir CsvHelper blitt tatt i bruk via NuGET PacketManager. 
-    // Stream -> CsvReader -> Visualiser.
-    //3
 
 
-    //3
+    //1
+    public async Task LoadFiles(InputFileChangeEventArgs e)
+    {
+        try
+        {
+            if (e.File != null)
+            {
+                file = e.File;
+                Console.WriteLine($"Filen '{file.Name}' ble lastet opp.");
+            }
+            else
+            {
+                Console.WriteLine("Ingen fil ble valgt.");
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Feil ved lasting av fil: {ex.Message}");
+            throw; // Kast unntaket videre for å indikere at handlingen mislyktes
+        }
+    }
+
+
+    //2
     //Her blir Json-Deserializerobject tatt i bruk..
     // Stream -> Reader -> Deserialize -> Visualiser.
-    private async Task<List<Ansatte>> FileJson() //Json 
+    public async Task<List<Ansatte>> FileJson(IBrowserFile file) //Json
     {
         // Sjekker om filen er null. Returnerer tom liste, hvis den er tom.
         if (file is null)
@@ -105,8 +128,10 @@ else
         //Try catch. Åpner strømmen og kopierer innholdet ved bruk av memorystream midlertidig.
         try
         {
+
             using (MemoryStream memoryStream = new MemoryStream())
             {
+                Console.WriteLine($"Filen '{file.Name}' Importeres....");
                 await file.OpenReadStream().CopyToAsync(memoryStream);
                 memoryStream.Position = 0;
 
@@ -114,52 +139,15 @@ else
                 //Vi bruker Newtonsoft.Json- biblioteket for å deserialisere til en liste og returneres.
                 using (StreamReader reader = new StreamReader(memoryStream))
                 {
+
                     var json = await reader.ReadToEndAsync();
                     ansatte = JsonConvert.DeserializeObject<List<Ansatte>>(json);
 
-                    return ansatte;
+
+                    return ansatte;                 
                 }
 
             }
-        }
-        catch (Exception ex)
-        {
-            errors.Add($"File: {file.Name} Error: {ex.Message}");
-            throw;
-        }
-
-
-    } 
-
-
-    private async Task<List<Ansatte>> FileCsv() //CSV
-    {
-
-        // Sjekker om filen er null. Returnerer tom liste, hvis den er tom.
-        if (file is null)
-        {
-            return new List<Ansatte>();
-        }
-
-        List<Ansatte> ansatteList = new List<Ansatte>();
-
-        try
-        {
-            using var stream = file.OpenReadStream(); // fungerer som en scanner i java
-            using (var reader = new StreamReader(stream))
-            using (var csv = new CsvReader(reader, CultureInfo.InvariantCulture))
-            {
-
-                while (await csv.ReadAsync()) 
-                {
-                    var ansatte = csv.GetRecord<Ansatte>();
-                    ansatteList.Add(ansatte);
-                }
-            }
-
-
-            return ansatteList;
-
 
         }
         catch (Exception ex)
@@ -167,105 +155,123 @@ else
             errors.Add($"File: {file.Name} Error: {ex.Message}");
             throw;
         }
+    }
 
-
-    } 
-
-
-
-
-       private async Task<List<Ansatte>> FileTxt() // SKAL skille kommaer uavhengig av filtyper. Men husk å endre dette i metoden Import(). Klarer å skille i csv filer, men ikke Json.
+    //2
+    // SKAL skille kommaer uavhengig av filtyper. Men husk å endre dette i metoden Import(). Klarer å skille i csv filer, men ikke Json.
+    public async Task<List<Ansatte>> Files(IBrowserFile file)
     {
+
         if (file is null)
         {
             return new List<Ansatte>();
         }
 
         List<Ansatte> ansatteList = new List<Ansatte>();
-
+        Console.WriteLine($"Filen '{file.Name}' importerer.");
         try
         {
             using var stream = file.OpenReadStream(maxFileSize); //Scanner sammenlignet med Java-scanner
             using var reader = new StreamReader(stream); //Leser
             string? line;
-    
+
 
             while ((line = await reader.ReadLineAsync()) != null) //Leser linje for linje
             {
-            
-                var column = line.Split(','); //Leser linje for linje, men splitter ulike verdier med kommaer i 
-                if (int.TryParse(column[0], out var id)) //  Id = int.Parse(column[0]) Kan også gjøres istedet for å bruke ( if (int.TryParse(column[0], out var id)) )
+
+                var column = line.Split(','); //Leser linje for linje, men splitter ulike verdier med kommaer i
+                if (int.TryParse(column[0], out var id) && int.TryParse(column[3], out var telefon)) //  Id = int.Parse(column[0]) Kan også gjøres istedet for å bruke ( if (int.TryParse(column[0], out var id)) )
                 {
                     var ansatt = new Ansatte
                         {
                             Id = id,
                             Fornavn = column[1],
                             Etternavn = column[2],
-                            EPost = column[3],
+                            Telefon = telefon,
                             Brukernavn = column[4],
-                            Passord = column[5]
+                            Passord = column[5],
+                            EPost = column[6],
                         };
 
                     ansatteList.Add(ansatt);
+
                 }
             }
+
         }
+
         catch (Exception ex) // Feilmeldinger
         {
             errors.Add($"Feil ved innlesing av fil: {file.Name}. Feilmelding: {ex.Message}");
         }
 
         return ansatteList;
+
     }
-    private async Task Import()
+
+    //3
+    //Sjekker om filen samsvarer med riktige typer-filer
+    public async Task Import(IBrowserFile file)
     {
         try
         {
-            
-            errors.Clear(); //Nullstiller skjermen.
 
-            if ( file != null)
+            if (file != null)
             {
                 var fileExtension = Path.GetExtension(file.Name)?.ToLower();
 
-                if (fileExtension == ".json")
+
+                if (fileExtension == ".txt" || fileExtension == ".csv")
                 {
-                    ansatte = await FileJson(); //Metoden blir brukt i denne. Det skal kunne leses og desrialiseres en bestemt fil.
+                    ansatte = await Files(file);
+                    Console.WriteLine($"Filen '{file.Name}' er ferdig importert.");
+
                 }
-                else if (fileExtension == ".csv")
+                else if (fileExtension == ".json")
                 {
-                    ansatte = await FileCsv();
+                    ansatte = await FileJson(file);
+                    Console.WriteLine($"Filen '{file.Name}' er ferdig importert.");
                 }
-                else if (fileExtension == ".txt")
+
+                else if (fileExtension != ".csv" || fileExtension != ".json" || fileExtension != ".txt")
                 {
-                    ansatte = await FileTxt();
+                    errors.Add("Det må være en JSON-, CSV eller TXT-fil.");
+                    Console.WriteLine("Det må være en JSON-, CSV eller TXT-fil.");
                 }
-                else if (fileExtension != ".csv" ||  fileExtension != ".json")
-                {
-                    errors.Add("Det må være en JSON- eller CSV-fil.");
-                }
-                else 
-           
-                    errors.Add("Du må laste opp en JSON- eller CSV-fil");
-               
-                {
-                    
-                }
+
 
             }
-            
-            
-
+            else if (file == null)
+            {
+                Console.WriteLine("Kan ikke importere fordi ingen vil er valgt");
+            }
+            else
+            {
+                Console.WriteLine("123123");
+            }
         }
         catch (Exception ex)
         {
             errors.Add($"Error: {ex.Message}");
             throw;
         }
-        
-    } //2
+    }
 
- 
-
-
+    //4
+    //Bekreftelse på at det visualiseres (Brukes til testing)
+    public bool Visualisering()
+    {
+        if (ansatte != null && ansatte.Any())
+        {
+            Console.WriteLine($"Filen '{file.Name} 'Visualiseres!");
+            Console.WriteLine($"Visualisering OK! Antall ansatte som vises: '{ansatte.Count}'");           
+            return true;
+        }
+     
+        else
+        {
+            Console.WriteLine("Ingen data å vise.");
+            return false;
+        }
+    }
 }
