--- a/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
+++ b/VismaBlazor/VismaBlazor/Components/Pages/Resultat.razor
@@ -47,7 +47,7 @@ else
 
 @code {
 
-    private List<BrukerResponse>? BrukerRes;
+    private List<BrukerRespons>? BrukerRes;
 
     protected override async Task OnInitializedAsync()
     {
